css/main.css
/* 

CSS Reset

*/
body {
    padding: 0;
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
}

a {
    color: #FFFFFF;
    text-decoration: none;
}

a:hover {
    color: #FFFFFF;
    text-decoration: none;
}

/* 

HTML, Body

*/
@import url(https://fonts.googleapis.com/css?family=Khula:700);
html, body {
    height: 100%;
    font-family: 'Open Sans', sans-serif;
    scroll-behavior: smooth;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background: rgb(30, 30, 30);
}

::-webkit-scrollbar-thumb {
    background: rgb(66, 66, 66); 
}

::-webkit-scrollbar-thumb:hover {
    background: rgb(79, 79, 79); 
}


/* 

Navbar

*/
body {
    position: relative;
    height: 100%;
    width: 100%;
}

.background {
    background-image: url(../img/code.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    background-position: left;
}

.blur {
    height: 100%;
    width: 100%;
    background-color: rgba(30, 30, 30, 0.8);
    background-attachment: fixed;
}

.wrapper {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.navbar {
    width: 100%;
    position: fixed;
    bottom: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-end;
    margin: 0 auto;
    transition: 1000ms;
}

.navbar-item {
    width: 20px;
    height: 20px;
    background-color: rgb(172, 171, 169);
    border: 0px solid #000;
    border-radius: 20px;
    margin: 1rem 0.5rem;
    display: flex;
    align-items: center;
    transition: 500ms;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.navbar-item:hover {
    background-color: rgb(255, 255, 255);
}

.active {
    background-color: rgb(255, 255, 255);
}

/* 

Main Banner

*/
.main-banner {
    display: flex;
    flex-direction: column;
    height: 62rem;
    width: 100%;
    /* background-color: rgba(30, 30, 30, 0.5); */
}

.title {
    display: inline-block;
    color: #FFF;
    font-size: 4rem;
    font-weight: bold;
    margin-top: 10rem;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.console-container {
    font-family: Khula;
    font-size: 2rem;
    font-weight: bold;
    text-align: center;
    color: #FFF;
    margin: 0 auto;
}

.console-underscore {
    display: inline-block;
    position: relative;
    top: -0.14em;
    left: 10px;
}

/* 

Who Am I

*/
.who-am-i {
    height: 42rem;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #FFFFFF;
}

.details {
    display: flex;
    align-items: center;
    height: 30rem;
}

.profile-photo {
    display: inline-block;
    height: 10rem;
    width: 10rem;
    border: 0px solid #000;
    border-radius: 10rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    margin-left: 10%;
    background-image: url("../img/profilephoto.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}

.about-me {
    width: 50%;
    display: inline-flex;
    flex-direction: column;
    /* margin-top: 5rem; */
    margin-left: 5rem;
}

.about-me-title {
    display: inline-block;
    font-size: 2rem;
    font-weight: bolder;
}

.about-me-text {
    display: inline-block;
    font-size: 1.3rem;
}

.languages {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding-bottom: 3rem;
}

.language {
    height: 4rem;
    width: 4rem;
    background-color: rgb(255, 255, 255);
    border: 0px solid #000;
    border-radius: 4rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    margin-top: 2rem;
    margin-left: 1rem;
    margin-right: 1rem;
}

.language:hover {
    background-color: rgba(0, 0, 0, 0.1);
    transition: 500ms;
}

.csharp {
    background-image: url("../img/csharp.png");
    background-size: cover;
    background-repeat: no-repeat;
}

.java {
    background-image: url("../img/java.png");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position: center;
}

.html {
    background-image: url("../img/html.png");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position: center;
}

.css {
    background-image: url("../img/css.png");
    background-size: 55%;
    background-repeat: no-repeat;
    background-position: center;
}

.javascript {
    background-image: url("../img/javascript.png");
    background-size: cover;
    background-repeat: no-repeat;
}

.nodejs {
    background-image: url("../img/nodejs.png");
    background-size: 90%;
    background-repeat: no-repeat;
    background-position: center;
}

.python {
    background-image: url("../img/python.png");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position: center;
}

.github {
    background-image: url("../img/github.png");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position: center;
}

@media (max-width: 950px) {
    .details {
        flex-direction: column;
        justify-content: center;
    }

    .profile-photo {
        height: 8rem;
        width: 8rem;
        margin-left: 0;
        margin-bottom: 2rem;
    }
    
    .about-me {
        width: 70%;
        margin-left: 0;
    }
}

@media (max-width: 695px) {
    .who-am-i {
        height: unset;
        padding: 5rem 0;
    }

    .details {
        height: unset;
    }
}
/* 

Featured Projects

*/
.featured-projects-title {
    display: inline-block;
    font-size: 2rem;
    font-weight: bolder;
    text-align: center;
    color: #FFFFFF;
    margin-bottom: 2rem;
}

.featured-projects {
    height: 80rem;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.featured-project-small {
    display: flex;
    height: 170px;
    width: 40rem;
    margin-bottom: 2rem;
    background-color: rgb(48, 49, 54);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.featured-project {
    display: flex;
    height: 286px;
    width: 40rem;
    margin-bottom: 2rem;
    background-color: rgb(48, 49, 54);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.featured-project-big {
    display: flex;
    height: 343px;
    width: 40rem;
    margin-bottom: 2rem;
    background-color: rgb(48, 49, 54);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.featured-project-details {
    width: 40%;
    display: flex;
    flex-direction: column;
    margin-top: 1.5rem;
    margin-left: 1rem;
}

.featured-project-title {
    display: inline-block;
    font-size: 1rem;
    font-weight: bolder;
    color: #FFFFFF;
}

.featured-project-desc {
    display: inline-block;
    font-size: 1rem;
    color: #FFFFFF;
}

.cryptoai {
    margin-right: 4.5rem;
}

.exchange-background {
    display: flex;
    width: 340px;
    background-image: url("../img/exchange_background.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    justify-content: center;
}

@media (max-width: 695px) {
    .featured-projects-list {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .featured-projects {
        height: unset;
        padding: 10rem 0;
    }
    
    .featured-project-small {
        height: unset;
        width: 60%;
        flex-direction: column;
        padding-bottom: 2rem;
    }
    
    .featured-project {
        height: unset;
        width: 60%;
        flex-direction: column;
        padding-bottom: 2rem;
    }
    
    .featured-project-big {
        height: unset;
        width: 60%;
        flex-direction: column;
        padding-bottom: 2rem;
    }
    
    .featured-project-details {
        width: 85%;
        flex-direction: column;
    }
    
    .cryptoai {
        height: unset;
        width: 80%;
    }
    
    .sneaker {
        height: unset;
        width: 80%;
    }
    
    .exchange {
        height: unset;
        width: 50%;
        margin: 0 auto;
    }

    .exchange-background {
        width: unset;
    }
}

@media (max-width: 390px) {
    .featured-project-small {
        width: 80%;
    }
    
    .featured-project {
        width: 80%;
    }
    
    .featured-project-big {
        width: 80%;
    }
}

/* 

Contact

*/

.contact {
    height: 20rem;
    width: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.contact-info-up, .contact-info-down {
    display: flex;
    align-items: center;
    width: 15rem;
    color: rgb(60, 130, 245);
    font-size: 1.2rem;
}

.contact-detail, .contact-detail:hover {
    color: rgb(60, 130, 245);
}

.contact-info-up {
    margin-top: 4rem;
    margin-bottom: 2rem;
}

.contact-info-down {
    margin-bottom: 4rem;
}

.contact-icon {
    width: 3rem;
    height: 3rem;
    /* background-color: rgb(60, 130, 245); */
    border: 0px solid #000;
    border-radius: 4rem;
    margin-right: 1rem;
}

@media (max-width: 350px) {
    .contact-info-up, .contact-info-down {
        flex-direction: column;
    }

    .contact-icon {
        margin: 0;
        margin-bottom: 1rem;
    }
}

/* 

Footer

*/
.footer {
    height: 10rem;
    width: 100%;    
    background-color: rgba(0, 0, 0, 0.8);
}

.footer-text {
    padding-top: 3rem;
    padding-bottom: 3rem;
    color: #FFF;
    text-align: center;
    font-size: 1.1rem;
}

